--- a/css/memories.css
+++ b/css/memories.css
@@ -19,7 +19,7 @@
 /**                                   第一部分                                  **/
 /*盒子*/
 .ly-box01 {
-	width:50px;
+	width:60px;
 	height:50px;
 	background-color:#FFF;
 	border-radius: 25px;
@@ -195,7 +195,7 @@
 /*文本*/
 .ly-txt01 {
 	position:absolute;
-	width: 40%;
+	width: 80%;
 	left:10%;
 	top:10%;
 }
@@ -238,7 +238,7 @@
 	font-size: 30px;
 	font-color: #000;
 	position: relative;
-	left: 5%;
+	left: 20%;
 	top: 5%;
 	margin-top:-71px;
 	opacity: 0;
@@ -267,7 +267,7 @@
 	font-size: 30px;
 	font-color: #000;
 	position: relative;
-	left: 5%;
+	left: 20%;
 	top: 5%;
 	opacity: 0;
 	margin-top:-71px;
@@ -296,7 +296,7 @@
 	font-size: 30px;
 	font-color: #000;
 	position: relative;
-	left: 5%;
+	left: 20%;
 	top: 5%;
 	opacity: 0;
 	margin-top:-71px;
@@ -322,10 +322,10 @@
 
 .ly-stxt05 {
 	font-family: Microsoft YaHei;
-	font-size: 30px;
+	font-size: 26px;
 	font-color: #000;
 	position: relative;
-	left: 5%;
+	left: 60%;
 	top: 5%;
 	opacity: 0;
 	margin-top:-71px;
@@ -556,8 +556,8 @@
 
 /* 盒子 */
 .ly-box11 {
-	width: 30%;
-	height: 600px;
+	width: 70%;
+	height: 500px;
 	border: 2px #CCC;
 	background-color: #fff;
 	background-color: rgba(255,255,255,0.6);
@@ -606,8 +606,9 @@
 	position: absolute;
 	bottom: 0;
 	width: 100%;
-	height: 70%;
-	border-radius: 8px;
+	height: 150%;
+	border-radius: 8px; 
+	right: 0%;
 	opacity:0;
 	overflow: hidden;
 	transition:all 0.5s;
@@ -616,11 +617,13 @@
 	opacity:1;
 	transition-delay:3.5s;
 }
-.ly-img11{
+.ly-img11 {
 	position: absolute;
-	width: 100%;
-	bottom: 0;
-}
+	width: 70%; 
+	bottom: 0; 
+	left: 15%; 
+	transform: scale(1.4); /* 使用 scale() 函數進行縮放，此處縮放比例為 1.2，可根據需要進行調整 */
+  }
 /*文本*/
 .ly-txt11 {
 	font-family: Microsoft YaHei;
@@ -643,7 +646,7 @@
 .ly-txt12 {
 	font-family: Microsoft YaHei;
 	font-size: 20px;
-	text-indent:2em;
+	text-indent:0em;
 	font-color: #000;
 	position: absolute;
 	padding-top: 20px;
